--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -6,7 +6,8 @@
         <ion-row color="primary" justify-content-center>
           <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
             <div class="ion-text-center"> <br>
-              <img src="./assets/img/jatanegara.png" alt="Jata Negara" width="100%">
+              <!-- <img src="./assets/img/jatanegara.png" alt="Jata Negara" width="100%"> -->
+              <h1 style="margin: 60px auto; color: white; font-weight: 500; font-size: 40px;">MyPotholes</h1>
             </div>
             <ion-card>
               <ion-card-content>
