--- a/src/app/core/superadmin/admin-management/admin-management.page.html
+++ b/src/app/core/superadmin/admin-management/admin-management.page.html
@@ -24,7 +24,7 @@
         <ion-card-content>
           <ion-text color="light">
             <ion-icon size="large" name="person-add"></ion-icon>
-            <h3>Daftar Admin Jalan</h3>
+            <h3>Daftar Admin</h3>
           </ion-text>
         </ion-card-content>
       </ion-card>
@@ -43,6 +43,15 @@
           <ion-text color="light">
             <ion-icon size="large" name="people"></ion-icon>
             <h3>Papar Super Admin</h3>
+          </ion-text>
+        </ion-card-content>
+      </ion-card>
+      <hr>
+      <ion-card href="/superadmin/create-jalan">
+        <ion-card-content>
+          <ion-text color="light">
+            <ion-icon size="large" name="construct"></ion-icon>
+            <h3>Daftar Jalan</h3>
           </ion-text>
         </ion-card-content>
       </ion-card>
