--- a/src/app/auth/register/register-user/register-user.page.html
+++ b/src/app/auth/register/register-user/register-user.page.html
@@ -39,8 +39,7 @@
               <ion-item>
                 <ion-select formControlName="doc_type" placeholder="Jenis Pengenalan" interface="action-sheet">
                   <ion-select-option value="NRIC">NRIC No</ion-select-option>
-                  <ion-select-option value="PASS">Paspot No</ion-select-option>
-                  <ion-select-option value="COMP">No Syarikat</ion-select-option>
+                  <ion-select-option value="PASS">Passport No</ion-select-option>
                   <ion-select-option value="OTH">Lain-lain</ion-select-option>
                 </ion-select>
               </ion-item>
