--- a/src/app/core/admin/dashboard/dashboard.page.html
+++ b/src/app/core/admin/dashboard/dashboard.page.html
@@ -43,6 +43,11 @@
         <ion-icon name="megaphone-outline"></ion-icon>
         <ion-label>Hebahan</ion-label>
       </ion-tab-button>
+
+      <ion-tab-button (click)="logoutConfirm()">
+        <ion-icon name="log-out-outline"></ion-icon>
+        <ion-label>Keluar</ion-label>
+      </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
 
