--- a/src/app/core/superadmin/dashboard/dashboard.page.html
+++ b/src/app/core/superadmin/dashboard/dashboard.page.html
@@ -18,9 +18,6 @@
       </ion-list>
     </ion-toolbar>
 
-    <!-- <div>Address: {{address}}</div>
-    <div>Latitude: {{latitude}}</div>
-    <div>Longitude: {{longitude}}</div> -->
     <div #map id="map"></div>
 
     <ion-tab-bar slot="bottom" color-primary>
@@ -43,6 +40,12 @@
         <ion-icon name="megaphone-outline"></ion-icon>
         <ion-label>Hebahan</ion-label>
       </ion-tab-button>
+
+      <ion-tab-button (click)="logoutConfirm()">
+        <ion-icon name="log-out-outline"></ion-icon>
+        <ion-label>Keluar</ion-label>
+      </ion-tab-button>
+
     </ion-tab-bar>
   </ion-tabs>
 
