--- a/src/app/core/user/dashboard/dashboard.page.html
+++ b/src/app/core/user/dashboard/dashboard.page.html
@@ -1,4 +1,3 @@
-
 <ion-content [fullscreen]="true">
 
   <ion-tabs>
@@ -18,9 +17,6 @@
       </ion-list>
     </ion-toolbar>
 
-    <!-- <div>Address: {{address}}</div>
-    <div>Latitude: {{latitude}}</div>
-    <div>Longitude: {{longitude}}</div> -->
     <div #map id="map"></div>
 
     <ion-tab-bar slot="bottom" color-primary>
@@ -29,10 +25,10 @@
         <ion-label>Profil</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button href="/user/create-aduan">
+      <!-- <ion-tab-button href="/user/create-aduan">
         <ion-icon name="receipt-outline"></ion-icon>
         <ion-label>Aduan</ion-label>
-      </ion-tab-button>
+      </ion-tab-button> -->
 
       <ion-tab-button href="/user/aduan-list">
         <ion-icon name="desktop-outline"></ion-icon>
@@ -43,7 +39,26 @@
         <ion-icon name="megaphone-outline"></ion-icon>
         <ion-label>Hebahan</ion-label>
       </ion-tab-button>
+
+      <ion-tab-button (click)="logoutConfirm()">
+        <ion-icon name="log-out-outline"></ion-icon>
+        <ion-label>Keluar</ion-label>
+      </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
+
+  <ion-fab horizontal="end" vertical="bottom" slot="fixed">
+    <ion-fab-button color="secondary">
+      <ion-icon md="caret-up" ios="chevron-up-circle-outline"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-list side="top">
+      <ion-fab-button color="light" data-desc="info" (click)="getInfo()">
+        <ion-icon name="information-circle-outline"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-button color="light" data-desc="Aduan" href="{{routeAduan}}">
+        <ion-icon name="receipt-outline"></ion-icon>
+      </ion-fab-button>
+    </ion-fab-list>
+  </ion-fab>
 
 </ion-content>
