--- a/src/app/core/user/profile/profile.page.html
+++ b/src/app/core/user/profile/profile.page.html
@@ -6,7 +6,7 @@
       </ion-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button (click)="logout()">
+      <ion-button (click)="logoutConfirm()">
         <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -32,7 +32,7 @@
             </div>
             <div class="input">
               <ion-item>
-                <ion-input formControlName="email" placeholder="Alamat Emel" type="text"></ion-input>
+                <ion-input formControlName="email" placeholder="Alamat Emel" type="text" disabled></ion-input>
               </ion-item>
             </div>
             <div class="input">
@@ -42,7 +42,7 @@
             </div>
             <div class="input">
               <ion-item>
-                <ion-select formControlName="doc_type" placeholder="Jenis Pengenalan" interface="action-sheet">
+                <ion-select formControlName="doc_type" placeholder="Jenis Pengenalan" interface="action-sheet" disabled>
                   <ion-select-option value="NRIC">NRIC No</ion-select-option>
                   <ion-select-option value="PASS">Paspot No</ion-select-option>
                   <ion-select-option value="COMP">No Syarikat</ion-select-option>
@@ -52,7 +52,7 @@
             </div>
             <div class="input2">
               <ion-item>
-                <ion-input formControlName="doc_no" placeholder="No Pengenalan" type="number"></ion-input>
+                <ion-input formControlName="doc_no" placeholder="No Pengenalan" type="number" disabled></ion-input>
               </ion-item>
             </div>
             <div class="input2">
