--- a/src/app/core/superadmin/list/admin-list/admin-list.page.html
+++ b/src/app/core/superadmin/list/admin-list/admin-list.page.html
@@ -32,9 +32,9 @@
               </ion-card-content>
             </ion-col>
             <ion-col size="3">
-              <!-- <ion-badge color="success" mode="ios">Selesai</ion-badge> -->
             </ion-col>
           </ion-row>
+          <span style="font-size: 10px; float: right;">Lihat Butiran ></span>
         </ion-grid>
       </ion-card>
     </ion-list>
