--- a/src/app/core/superadmin/profile/profile.page.html
+++ b/src/app/core/superadmin/profile/profile.page.html
@@ -32,7 +32,7 @@
             </div>
             <div class="input">
               <ion-item>
-                <ion-input formControlName="email" placeholder="Alamat Emel" type="text"></ion-input>
+                <ion-input formControlName="email" placeholder="Alamat Emel" type="text" disabled></ion-input>
               </ion-item>
             </div>
             <div class="input">
@@ -45,19 +45,9 @@
                 <ion-input formControlName="jawatan" placeholder="Nama Jawatan" type="text"></ion-input>
               </ion-item>
             </div>
-            <div class="input">
-              <ion-item>
-                <ion-select formControlName="doc_type" placeholder="Jenis Pengenalan" interface="action-sheet">
-                  <ion-select-option value="NRIC">NRIC No</ion-select-option>
-                  <ion-select-option value="PASS">Paspot No</ion-select-option>
-                  <ion-select-option value="COMP">No Syarikat</ion-select-option>
-                  <ion-select-option value="OTH">Lain-lain</ion-select-option>
-                </ion-select>
-              </ion-item>
-            </div>
             <div class="input2">
               <ion-item>
-                <ion-input formControlName="doc_no" placeholder="No Pengenalan" type="number"></ion-input>
+                <ion-input formControlName="doc_no" placeholder="No Pengenalan" type="number" disabled></ion-input>
               </ion-item>
             </div>
             <div class="input2">
