--- a/src/app/auth/register/register-admin/register-admin.page.html
+++ b/src/app/auth/register/register-admin/register-admin.page.html
@@ -53,7 +53,8 @@
             </div>
             <div class="input2">
               <ion-item>
-                <ion-input formControlName="telefon" placeholder="No Telefon" type="number"></ion-input>
+                <ion-input formControlName="telefon" placeholder="No Telefon" type="text"
+                  (keypress)="numericOnly($event)" maxlength="11"></ion-input>
               </ion-item>
             </div>
             <div class="input">
