--- a/src/app/core/admin/profile/profile.page.html
+++ b/src/app/core/admin/profile/profile.page.html
@@ -32,7 +32,7 @@
             </div>
             <div class="input">
               <ion-item>
-                <ion-input formControlName="email" placeholder="Alamat Emel" type="text"></ion-input>
+                <ion-input formControlName="email" placeholder="Alamat Emel" type="text" disabled></ion-input>
               </ion-item>
             </div>
             <div class="input">
@@ -47,17 +47,19 @@
             </div>
             <div class="input2">
               <ion-item>
-                <ion-input formControlName="doc_no" placeholder="No Pengenalan" type="number"></ion-input>
+                <ion-input formControlName="doc_no" placeholder="No Pengenalan" type="number" disabled></ion-input>
               </ion-item>
             </div>
             <div class="input2">
               <ion-item>
-                <ion-input formControlName="telefon" placeholder="No Telefon" type="number"></ion-input>
+                <ion-input formControlName="telefon" placeholder="No Telefon" type="text"
+                  (keypress)="numericOnly($event)" maxlength="11"></ion-input>
               </ion-item>
             </div>
             <div class="input">
               <ion-item>
-                <ion-input formControlName="password" placeholder="Kata Laluan Baru" type="{{showPass ? 'password' : 'text' }}" autocomplete="off">
+                <ion-input formControlName="password" placeholder="Kata Laluan Baru"
+                  type="{{showPass ? 'password' : 'text' }}" autocomplete="off">
                 </ion-input>
               </ion-item>
             </div>
