--- a/src/app/core/global/info/info.page.scss
+++ b/src/app/core/global/info/info.page.scss
@@ -14,7 +14,7 @@ ion-toolbar {
 }
 
 ion-card {
-  margin: 90px 10px 10px 10px;
+  margin: 80px 10px 10px 10px;
   border-radius: 10px;
 
 
@@ -36,4 +36,10 @@ h4 {
   font-weight: 500;
   margin-bottom: 0;
   color: var(--ion-color-primary);
+}
+
+ion-content.transparent {
+  --background: transparent;
+  // top: 60px;
+  height: 100%;
 }
