--- a/src/app/core/user/dashboard/dashboard.page.html
+++ b/src/app/core/user/dashboard/dashboard.page.html
@@ -52,10 +52,10 @@
       <ion-icon md="caret-up" ios="chevron-up-circle-outline"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="top">
-      <ion-fab-button color="light" data-desc="info" (click)="getInfo()">
+      <ion-fab-button color="medium" data-desc="info" (click)="getInfo()">
         <ion-icon name="information-circle-outline"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button color="light" data-desc="Aduan" href="{{routeAduan}}">
+      <ion-fab-button class="custom-fab" color="warning" data-desc="Aduan" (click)="routeToAduan()">
         <ion-icon name="receipt-outline"></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
