--- a/src/app/core/user/dashboard/dashboard.page.scss
+++ b/src/app/core/user/dashboard/dashboard.page.scss
@@ -48,7 +48,7 @@ ion-toolbar {
 }
 
 ion-fab {
-  bottom: 14%;
+  bottom: 15%;
 
   ion-fab-button[data-desc] {
     position: relative;
@@ -66,4 +66,9 @@ ion-fab-button[data-desc]::after {
   border-radius: 15px;
   color: white;
   box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
+}
+
+ion-fab-button.custom-fab {
+  height: 50px;
+  width: 50px;
 }
