--- a/src/app/core/admin/create-jalan/create-jalan.page.html
+++ b/src/app/core/admin/create-jalan/create-jalan.page.html
@@ -65,10 +65,10 @@
                 </ion-col>
               </ion-row>
               <ion-label position="floating">Negeri</ion-label>
-              <ion-item color="light">{{jalan.negeri}}
+              <ion-item color="light">
                 <ion-select formControlName="negeri" placeholder="Pilih Negeri" interface="action-sheet"
-                  (ionChange)="selectDaerah($event)" value="{{jalan.negeri}}">
-                  <ion-select-option *ngFor="let negeri of negeris|async; let i = index" [value]="negeri.id">
+                  (ionChange)="selectDaerah($event)">
+                  <ion-select-option *ngFor="let negeri of negeris|async; let i = index" [value]="negeri.id" >
                     {{negeri.nama_negeri}}
                   </ion-select-option>
                 </ion-select>
