--- a/src/app/auth/register/register-admin/register-admin.page.html
+++ b/src/app/auth/register/register-admin/register-admin.page.html
@@ -48,7 +48,7 @@
             </div>
             <div class="input2">
               <ion-item>
-                <ion-input formControlName="doc_no" placeholder="No Pengenalan" type="number" *ngIf="isEditMode"
+                <ion-input formControlName="doc_no" placeholder="No Pengenalan" type="text" *ngIf="isEditMode"
                   disabled>
                 </ion-input>
                 <ion-input id="ICReg" formControlName="doc_no" placeholder="No Pengenalan" type="tel"
