--- a/src/app/core/admin/create-jalan/create-jalan.page.html
+++ b/src/app/core/admin/create-jalan/create-jalan.page.html
@@ -45,7 +45,7 @@
               </ion-item>
               <ion-label position="floating">Status</ion-label>
               <ion-item color="light">
-                <ion-input formControlName="status" type="text" placeholder="Nyatakan Status Jalan"></ion-input>
+                <ion-input formControlName="status" type="text" placeholder="Nyatakan Status Jalan" disabled></ion-input>
               </ion-item>
               <ion-row>
                 <ion-col size="6">
