--- a/src/app/modal/jalan-detail/jalan-detail.page.html
+++ b/src/app/modal/jalan-detail/jalan-detail.page.html
@@ -35,7 +35,7 @@
         <ion-button *ngIf="isAdmin" (click)="openEditModal()" mode="ios" color="primary" shape="round">
           Kemaskini
         </ion-button>
-        <ion-button *ngIf="isAdmin" (click)="onDeleteJalan()" mode="ios" color="danger" shape="round">
+        <ion-button *ngIf="isAdmin" (click)="deleteConfirm()" mode="ios" color="danger" shape="round">
           Hapus
         </ion-button>
       </div>
