--- a/src/app/core/superadmin/profile/profile.page.html
+++ b/src/app/core/superadmin/profile/profile.page.html
@@ -21,7 +21,7 @@
         <ion-row>
           <ion-col size="12">
             <div class="avatar">
-              <img src="../../assets/img/default_icon.jpeg" alt="">
+              <img [src]="url" alt="">
             </div>
           </ion-col>
           <ion-col size="12">
