--- a/src/app/core/user/dashboard/dashboard.page.html
+++ b/src/app/core/user/dashboard/dashboard.page.html
@@ -48,14 +48,14 @@
   </ion-tabs>
 
   <ion-fab horizontal="end" vertical="bottom" slot="fixed">
-    <ion-fab-button color="secondary">
-      <ion-icon md="caret-up" ios="chevron-up-circle-outline"></ion-icon>
+    <ion-fab-button color="tertiary">
+      <ion-icon icon="caret-up"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="top">
-      <ion-fab-button color="medium" data-desc="info" (click)="getInfo()">
+      <ion-fab-button color="medium" data-desc="Info" (click)="getInfo()">
         <ion-icon name="information-circle-outline"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button class="custom-fab" color="warning" data-desc="Aduan" (click)="routeToAduan()">
+      <ion-fab-button class="custom-fab" color="warning" data-desc="Daftar Aduan" (click)="routeToAduan()">
         <ion-icon name="receipt-outline"></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
