--- a/src/app/auth/forgot/forgot.page.html
+++ b/src/app/auth/forgot/forgot.page.html
@@ -20,7 +20,7 @@
 
   <div id="container" class="background">
     <ion-list>
-      <form #form="ngForm" (ngSubmit)="reset(form)">
+      <form (ngSubmit)="submit()" [formGroup]="forgot">
         <ion-grid>
           <ion-row color="primary" justify-content-center>
             <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
@@ -29,14 +29,14 @@
               <div padding>
                 <ion-label>Alamat E-mel</ion-label>
                 <ion-item>
-                  <ion-input name="email" type="email" placeholder="your@email.com" ngModel required></ion-input>
+                  <ion-input name="email" type="email" placeholder="your@email.com" formControlName="email"></ion-input>
                 </ion-item>
               </div>
               <br>
               <p style="font-size: 12px; " color="medium">*Kata Laluan baru akan dihantar ke e-mel anda. Sila semak dan ikut arahan seterusnya.</p>
               <br>
               <div padding>
-                <ion-button size="medium" type="submit" [disabled]="form.invalid" expand="block" shape="round">Hantar
+                <ion-button size="medium" type="submit" expand="block" shape="round">Hantar
                 </ion-button>
               </div>
             </ion-col>
