--- a/src/app/core/superadmin/list/aduan-list/aduan-list.page.html
+++ b/src/app/core/superadmin/list/aduan-list/aduan-list.page.html
@@ -33,6 +33,8 @@
               <ion-badge color="success" mode="ios">Selesai</ion-badge>
             </ion-col>
           </ion-row>
+
+          <span style="font-size: 10px; float: right;">Lihat Butiran ></span>
         </ion-grid>
       </ion-card>
     </ion-list>
