--- a/src/app/modal/jalan-detail/jalan-detail.page.html
+++ b/src/app/modal/jalan-detail/jalan-detail.page.html
@@ -33,7 +33,7 @@
       </ion-card>
       <div class="ion-text-center">
         <ion-button *ngIf="isAdmin" (click)="openEditModal()" mode="ios" color="primary" shape="round">
-          Kemaskini
+          Kemas Kini
         </ion-button>
         <ion-button *ngIf="isAdmin" (click)="deleteConfirm()" mode="ios" color="danger" shape="round">
           Hapus
