--- a/src/app/core/user/create/create-aduan/create-aduan.page.html
+++ b/src/app/core/user/create/create-aduan/create-aduan.page.html
@@ -31,7 +31,7 @@
                 <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
                   <div padding>
                     <ion-item>
-                      <ion-input formControlName="title" type="text" placeholder="Tajuk Aduan" disabled>
+                      <ion-input formControlName="title" type="text" placeholder="Tajuk Aduan" disabled="true" style="color:grey;">
                       </ion-input>
                     </ion-item>
                     <ion-item>
