--- a/src/app/core/user/profile-edit/profile-edit.page.html
+++ b/src/app/core/user/profile-edit/profile-edit.page.html
@@ -3,14 +3,14 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Kemaskini Profil</ion-title>
+    <ion-title>Kemas Kini Profil</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Kemaskini Profil</ion-title>
+      <ion-title size="large">Kemas Kini Profil</ion-title>
     </ion-toolbar>
   </ion-header>
 
