--- a/src/app/auth/register/register-admin/register-admin.page.html
+++ b/src/app/auth/register/register-admin/register-admin.page.html
@@ -15,11 +15,16 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <form [formGroup]="regAdminForm">
+  <form [formGroup]="regAdminForm" class="container">
     <div id="container" class="header">
       <ion-grid fixed>
         <ion-row>
-          <ion-col size="9">
+          <ion-col size="12">
+            <div class="avatar">
+              <img [src]="url" alt="">
+            </div>
+          </ion-col>
+          <ion-col size="12">
             <div class="input">
               <ion-item>
                 <ion-input formControlName="name" placeholder="Nama Penuh" type="text"></ion-input>
@@ -71,7 +76,7 @@
               </ion-item>
             </div>
           </ion-col>
-          <ion-col size="3">
+          <!-- <ion-col size="3">
             <div class="avatar">
               <label>
                 <img [src]="url" alt="">
@@ -79,7 +84,7 @@
                   (change)="fileEvent($event)" accept="image/*"></ion-input>
               </label>
             </div>
-          </ion-col>
+          </ion-col> -->
         </ion-row>
       </ion-grid>
     </div>
