--- a/src/app/core/global/info/info.page.html
+++ b/src/app/core/global/info/info.page.html
@@ -43,13 +43,13 @@
                 <img src="../../../../assets/img/infocsfj.jpeg" alt="">
               </ion-card-content>
             </ion-card>
-            <br>
-            <div class="ion-text-center">
+            <!-- <br> -->
+            <!-- <div class="ion-text-center">
               <ion-button mode="ios" (click)="closeModal()" class="btn-custom">
                 <ion-icon slot="start" name="create-outline"></ion-icon>
                 Daftar Aduan
               </ion-button>
-            </div>
+            </div> -->
           </ion-col>
         </ion-row>
       </ion-grid>
