--- a/src/app/core/superadmin/admin-management/admin-management.page.html
+++ b/src/app/core/superadmin/admin-management/admin-management.page.html
@@ -8,11 +8,7 @@
 
     <ion-title mode="ios">Super Admin</ion-title>
 
-    <ion-buttons slot="end">
-      <ion-button (click)="logout()">
-        <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
-      </ion-button>
-    </ion-buttons>
+    
   </ion-toolbar>
 </ion-header>
 
@@ -51,7 +47,7 @@
         <ion-card-content>
           <ion-text color="light">
             <ion-icon size="large" name="construct"></ion-icon>
-            <h3>Daftar Jalan</h3>
+            <h3>Daftar Status Jalan</h3>
           </ion-text>
         </ion-card-content>
       </ion-card>
