--- a/src/app/core/user/list/jalan-list/jalan-list.page.html
+++ b/src/app/core/user/list/jalan-list/jalan-list.page.html
@@ -8,11 +8,6 @@
 
     <ion-title mode="ios">Hebahan Jalan</ion-title>
 
-    <ion-buttons slot="end">
-      <ion-button (click)="logout()">
-        <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
-      </ion-button>
-    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -26,14 +21,19 @@
           <ion-grid fixed>
             <ion-row>
               <div class="badge"></div>
-              <ion-col size="12">
+              <ion-col size="6" rowspan="2">
                 <ion-label>
+                  <br>
                   <ion-card-title>{{jalan.name}}</ion-card-title>
-                  <p>Status: {{jalan.status}}</p>
                 </ion-label>
               </ion-col>
+              <ion-col size="4" style="font-size: 10px;">
+                <span>Mula : {{jalan.start_date | date : 'dd MMM yyyy'}} <br> Tamat : {{jalan.end_date | date : 'dd MMM yyyy'}}</span>
+              </ion-col>
             </ion-row>
-
+            <ion-row>
+              <ion-col size="4"><p>Status: {{jalan.status}}</p></ion-col>
+            </ion-row>
             <span style="font-size: 10px; float: right;">Lihat Butiran ></span>
           </ion-grid>
         </ion-card>
